[package]
name = "aurpm_lib"
version = "0.1.0"
edition = "2018"
authors = ["harvey298"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "aurpm_lib"
#crate-type = ["cdylib"]

# please run cargo install --force cbindgen
[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }